--- a/chaincode/javascript/package.json
+++ b/chaincode/javascript/package.json
@@ -8,8 +8,8 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "fabric-contract-api": "^2.2.0",
-        "fabric-shim": "^2.2.0"
+        "fabric-contract-api": "~2.2.0",
+        "fabric-shim": "~2.2.0"
     },
     "author": "Your Name",
     "license": "Apache-2.0"
