--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
         "fabric-network": "^2.2.0",
         "fabric-ca-client": "^2.2.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "jsonwebtoken": "^9.0.2",
+        "bcryptjs": "^2.4.3"
     },
     "author": "Your Name",
     "license": "Apache-2.0"
