--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.1",
     "bootstrap": "^5.3.0",
     "axios": "^1.4.0",
-    "react-bootstrap": "^2.8.0"
+    "react-bootstrap": "^2.8.0",
+    "react-router-dom": "^6.8.0"
   },
   "browserslist": {
     "production": [
