--- a/backend_thuoctay/package.json
+++ b/backend_thuoctay/package.json
@@ -13,7 +13,15 @@
         "fabric-network": "^2.2.0",
         "fabric-ca-client": "^2.2.0",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "jsonwebtoken": "^9.0.2",
+        "bcryptjs": "^2.4.3",
+        "multer": "^1.4.5-lts.1",
+        "xlsx": "^0.18.5",
+        "pdfkit": "^0.13.0",
+        "nodemailer": "^6.9.7",
+        "crypto": "^1.0.1",
+        "node-cron": "^3.0.3"
     },
     "author": "Your Name",
     "license": "Apache-2.0"
