--- a/frontend_qlhscb/package.json
+++ b/frontend_qlhscb/package.json
@@ -15,7 +15,12 @@
     "react-scripts": "5.0.1",
     "bootstrap": "^5.3.0",
     "axios": "^1.4.0",
-    "react-bootstrap": "^2.8.0"
+    "react-bootstrap": "^2.8.0",
+    "react-router-dom": "^6.8.0",
+    "recharts": "^2.10.3",
+    "xlsx": "^0.18.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2"
   },
   "browserslist": {
     "production": [
